--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -101,7 +101,6 @@ steps:
         environment:
           - CONFIG
           - FLOW_REPO
-          - DO_PR
         shell: ["/bin/bash", "-e", "-c"]
     - improbable-eng/metahook:
 
@@ -119,7 +118,11 @@ steps:
           echo 'git checkout $$BUILDKITE_COMMIT || git checkout $$DEV_BRANCH || git checkout master'; set -x
                 git checkout $$BUILDKITE_COMMIT || git checkout $$DEV_BRANCH || git checkout master
           set +x
+          echo "--- PRE CHECKOUT HOOK, OIT STEP END"
 
+        # Note oops post-checkout removes temp dir completely oh no
+        pre-command: |
+          echo "+++ PRE COMMAND HOOK, OIT STEP BEGIN"
           echo "+++ DO_PR"; set -x
           echo "Use file 'DO_PR' as a signal to do pr tests or not omg"
           ap=`eval echo $$AHA_PUSHPULL`
@@ -130,10 +133,12 @@ steps:
           fi
           pwd
           test -e temp/DO_PR && echo FOO temp/DO_PR exists || echo FOO temp/DO_PR not exists
+          echo "--- PRE COMMAND HOOK, OIT STEP END"
 
-          echo "--- PRE CHECKOUT HOOK, OIT STEP END"
+
 
   commands:
+  - echo "+++ DO_PR in the docker"
   - set -x; test -e /buildkite/DO_PR && echo FOO /buildkite/DO_PR exists || echo FOO /buildkite/DO_PR not exists
   - source /aha/bin/activate
   - source /cad/modules/tcl/init/sh
@@ -150,7 +155,7 @@ steps:
   # - if [[ $$FLOW_REPO ]]; then
   # - if buildkite-agent artifact download $$AHA_PUSHPULL . ; then
   # - if [ "$$DO_PR" == "true" ]; then
-  - set -x; pwd; if test -f /buildkite/DO_PR; then
+  - set -x; pwd; if test -e /buildkite/DO_PR; then
       echo "Trigger came from aha repo; use default config";
     else
       echo "Trigger came from submod repo pull request; use pr config";
