--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -19,6 +19,9 @@ steps:
       pre-checkout: |
         echo "+++ PRE CHECKOUT HOOK, BDI STEP, BEGIN"
         
+        if expr "$$BUILDKITE_MESSAGE" : "PR from "; then
+            BUILDKITE_COMMIT=$$FLOW_HEAD_SHA; fi
+
         echo "+++ CD to aha repo clone"
         if ! test -e $$BUILDKITE_BUILD_CHECKOUT_PATH/.git; then
             echo "No aha clone in checkout dir (yet); I will build one"
