code cleanup; eliminate redundant git-checkout

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -24,10 +24,11 @@ steps:
             mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
             git clone $$BUILDKITE_REPO $$BUILDKITE_BUILD_CHECKOUT_PATH
         fi
+        echo "--- Check out appropriate AHA branch: $BUILDKITE_COMMIT, $AHA_DEFAULT_BRANCH, or master"
         if expr "$$BUILDKITE_MESSAGE" : "PR from "; then BUILDKITE_COMMIT=$$FLOW_HEAD_SHA; fi
         cd $$BUILDKITE_BUILD_CHECKOUT_PATH
-        echo 'git checkout -q $$BUILDKITE_COMMIT || git checkout -q $$DEV_BRANCH || git checkout -q master'; set -x
-              git checkout -q $$BUILDKITE_COMMIT || git checkout -q $$DEV_BRANCH || git checkout -q master
+        echo 'git checkout -qf $$BUILDKITE_COMMIT || git checkout -qf $$DEV_BRANCH || git checkout -qf master'; set -x
+              git checkout -qf $$BUILDKITE_COMMIT || git checkout -qf $$DEV_BRANCH || git checkout -qf master
         set +x
 
         echo "--- DEBUG DOCKER TRASH"; set -x
@@ -114,6 +115,7 @@ steps:
               mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
               git clone $$BUILDKITE_REPO $$BUILDKITE_BUILD_CHECKOUT_PATH
           fi
+          echo "--- Check out appropriate AHA branch: $BUILDKITE_COMMIT, $AHA_DEFAULT_BRANCH, or master"
           if expr "$$BUILDKITE_MESSAGE" : "PR from "; then BUILDKITE_COMMIT=$$FLOW_HEAD_SHA; fi
           cd $$BUILDKITE_BUILD_CHECKOUT_PATH
           echo 'git checkout $$BUILDKITE_COMMIT || git checkout $$DEV_BRANCH || git checkout master'; set -x
