--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -18,7 +18,6 @@ steps:
 
       pre-checkout: |
         echo "+++ BDI PRE CHECKOUT HOOK BEGIN"; set -x
-        exit 14
         echo "+++ CD to aha repo clone"
         if ! test -e $$BUILDKITE_BUILD_CHECKOUT_PATH/.git; then
             echo "No aha clone in checkout dir (yet); I will build one"
@@ -43,8 +42,13 @@ steps:
         echo "--- BDI PRE CHECKOUT HOOK END"
 
       pre-exit: |
-        s=99 # Default is to fail w exit code 99
-        test -v BUILDKITE_COMMAND_EXIT_STATUS && s=$$BUILDKITE_COMMAND_EXIT_STATUS
+        if test -v BUILDKITE_COMMAND_EXIT_STATUS; then
+            s=$$BUILDKITE_COMMAND_EXIT_STATUS
+        elif test -v BUILDKITE_LAST_HOOK_STATUS; then
+            s=$$BUILDKITE_LAST_HOOK_STATUS
+        else
+            s=99
+        fi
         # s=$$BUILDKITE_COMMAND_EXIT_STATUS || s=99
         echo "+++ exit code=$$s"
         env
