--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -51,7 +51,7 @@ steps:
         if [ "$$s1" != "0" ]; then
             echo "Hooks failed with exit status '$$s1'"; s=$$s1
         elif [ "$$s2" != "0" ]; then
-            echo "Commands failed with exit status '$$s2'"; s=$$s1
+            echo "Commands failed with exit status '$$s2'"; s=$$s2
         else s=0; fi
         echo "+++ exit code=$$s"
 
@@ -61,15 +61,17 @@ steps:
 
   commands:
   - echo "+++ BDI PIPELINE.XML COMMANDS BEGIN"
-  - exit 13
   - echo "--- Creating garnet Image"
   - docker build . -t "garnet:$BUILDKITE_COMMIT"
-  # Docker image successfully built, clear out .TEST file to avoid
-  # reporting failure to aha-flow-app.
 
-  # Clear out .TEST file to avoid reporting failure to aha-flow-app. This is a heroku thing I guess.
+  # Docker image successfully built. Remove
+  # .TEST file to avoid reporting failure to
+  # aha-flow-app. This is a heroku thing I guess.
   # FIXME remove heroku, remove this, along with pre-exit and post-checkout hooks
+
   - rm -rf temp/.TEST
+
+  - exit 13
 
   - echo "--- Pruning Docker Images"
   - yes | docker image prune -a --filter "until=6h" --filter=label='description=garnet' || true
