code cleanup + better storage of status-update info

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -43,21 +43,20 @@ steps:
 
       pre-exit: |
         set +u
-        echo "+++ CHECKING EXIT STATUS"; set -x
-        s1=$$BUILDKITE_LAST_HOOK_EXIT_STATUS
-        s2=$$BUILDKITE_COMMAND_EXIT_STATUS
-        echo "BUILDKITE_LAST_HOOK_EXIT_STATUS=$$s1"
-        echo "BUILDKITE_COMMAND_EXIT_STATUS=$$s2"
+        echo "+++ CHECKING EXIT STATUS"
+
+        s1=$$BUILDKITE_LAST_HOOK_EXIT_STATUS; s2=$$BUILDKITE_COMMAND_EXIT_STATUS
+        echo "LAST_HOOK_EXIT_STATUS=$$s1";    echo "COMMAND_EXIT_STATUS=$$s2"
         if [ "$$s1" != "0" ]; then
-            echo "Hooks failed with exit status '$$s1'"; s=$$s1
+            echo "+++ ERROR Hooks failed with exit status '$$s1'"; s=$$s1
         elif [ "$$s2" != "0" ]; then
-            echo "Commands failed with exit status '$$s2'"; s=$$s2
+            echo "+++ ERROR Commands failed with exit status '$$s2'"; s=$$s2
         else s=0; fi
-        echo "+++ exit code=$$s"
+        echo "exit code=$$s"
 
         # On failure, remove docker image. We already failed once,
         # so it's okay if the image does not exist.
-        [ "$$s" == 0 ] || docker image rm "garnet:$BUILDKITE_COMMIT" --no-prune
+        [ "$$s" == 0 ] || (set -x; docker image rm "garnet:$$BUILDKITE_COMMIT" --no-prune)
 
   commands:
   - echo "+++ BDI PIPELINE.XML COMMANDS BEGIN"
