--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -24,7 +24,7 @@ steps:
             mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
             git clone $$BUILDKITE_REPO $$BUILDKITE_BUILD_CHECKOUT_PATH
         fi
-        echo "--- Check out appropriate AHA branch: $BUILDKITE_COMMIT, $AHA_DEFAULT_BRANCH, or master"
+        echo "--- Check out appropriate AHA branch: $BUILDKITE_COMMIT, $$DEV_BRANCH, or master"
         if expr "$$BUILDKITE_MESSAGE" : "PR from "; then BUILDKITE_COMMIT=$$FLOW_HEAD_SHA; fi
         cd $$BUILDKITE_BUILD_CHECKOUT_PATH
         echo 'git checkout -qf $$BUILDKITE_COMMIT || git checkout -qf $$DEV_BRANCH || git checkout -qf master'; set -x
@@ -117,7 +117,7 @@ steps:
 
         pre-checkout: |
           set +x
-          echo "+++ PRE CHECKOUT HOOK, OIT STEP BEGIN"
+          echo "+++ OIT PRE CHECKOUT HOOK BEGIN"
 
           echo "+++ CD to aha repo clone"
           if ! test -e $$BUILDKITE_BUILD_CHECKOUT_PATH/.git; then
@@ -125,17 +125,17 @@ steps:
               mkdir -p $$BUILDKITE_BUILD_CHECKOUT_PATH
               git clone $$BUILDKITE_REPO $$BUILDKITE_BUILD_CHECKOUT_PATH
           fi
-          echo "--- Check out appropriate AHA branch: $BUILDKITE_COMMIT, $AHA_DEFAULT_BRANCH, or master"
+          echo "--- Check out appropriate AHA branch: $BUILDKITE_COMMIT, $$DEV_BRANCH, or master"
           if expr "$$BUILDKITE_MESSAGE" : "PR from "; then BUILDKITE_COMMIT=$$FLOW_HEAD_SHA; fi
           cd $$BUILDKITE_BUILD_CHECKOUT_PATH
           echo 'git checkout $$BUILDKITE_COMMIT || git checkout $$DEV_BRANCH || git checkout master'; set -x
                 git checkout $$BUILDKITE_COMMIT || git checkout $$DEV_BRANCH || git checkout master
           set +x
-          echo "--- PRE CHECKOUT HOOK, OIT STEP END"
+          echo "--- OIT PRE CHECKOUT HOOK END"
 
         pre-command: |
           # Cannot run this as part of pre-checkout, because post-checkout removes temp dir :o
-          echo "+++ PRE COMMAND HOOK, OIT STEP BEGIN"
+          echo "+++ OIT PRE COMMAND HOOK BEGIN"
           echo "Use file 'DO_PR' as a signal to do pr tests or not omg"
           ap=`eval echo $$AHA_PUSHPULL`
           if buildkite-agent artifact download $$ap . ; then
@@ -147,7 +147,7 @@ steps:
           fi
           pwd
           test -e temp/DO_PR && echo FOO temp/DO_PR exists || echo FOO temp/DO_PR not exists
-          echo "--- PRE COMMAND HOOK, OIT STEP END"
+          echo "--- OIT PRE COMMAND HOOK END"
 
         pre-exit: |
           echo "+++ CHECKING EXIT STATUS"; set -x
