--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -23,7 +23,7 @@ steps:
         # We want to rewrite that to be the sha of submod repo that
         # originally triggered the build.
 
-        if expr "$$BUILDKITE_MESSAGE" : "PR from "; then
+        if expr "$$BUILDKITE_MESSAGE" : "PR from " 2> /dev/null; then
             BUILDKITE_COMMIT=$$FLOW_HEAD_SHA;
         fi
 
@@ -32,7 +32,8 @@ steps:
         # We use commdir to pass information to other steps.
         # THIS ASSUMES THAT ALL STEPS RUN ON SAME HOST MACHINE and thus see the same commdir!
 
-        if git checkout -q $$BUILDKITE_COMMIT; then
+        cd $$BUILDKITE_BUILD_CHECKOUT_PATH
+        if git checkout -qf $$BUILDKITE_COMMIT; then
             echo "+++ UNSET DO_PR"
             echo "BUILDKITE_COMMIT found in aha repo, we will do daily regressions."
         else
@@ -50,7 +51,6 @@ steps:
         #         fi
 
         echo "--- Check out appropriate AHA branch: $BUILDKITE_COMMIT, $$DEV_BRANCH, or master"
-        if expr "$$BUILDKITE_MESSAGE" : "PR from "; then BUILDKITE_COMMIT=$$FLOW_HEAD_SHA; fi
         cd $$BUILDKITE_BUILD_CHECKOUT_PATH
         echo 'git checkout -qf $$BUILDKITE_COMMIT || git checkout -qf $$DEV_BRANCH || git checkout -qf master'; set -x
               git checkout -qf $$BUILDKITE_COMMIT || git checkout -qf $$DEV_BRANCH || git checkout -qf master
